<resources>
    <string name="app_name">NewsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title1">Cập nhật mọi tin nóng,</string>
    <string name="title2">mọi lúc mọi nơi</string>
    <string name="mainTitle">Tin mới</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password"><b>Quên mật khẩu</b></string>
    <string name="intro_register"><b>Bạn chưa có tài khoản?<u> Đăng ký ngay</u></b>  </string>
    <string name="sign_up">Tạo tài khoản</string>
    <string name="name">Họ và tên</string>
    <string name="btn_sign_up">Đăng ký</string>
    <string name="intro_login"><b>Bạn đã có tài khoản? <u> Đăng nhập</u></b>  </string>
    <string name="load">Đang xử lý...</string>
    <string name="intro_forgot_password">Nhập địa chỉ email của bạn và chúng tôi sẽ gửi liên kết để đặt lại mật khẩu.</string>
    <string name="get_password">Lấy lại mật khẩu</string>
    <string name="source">Source</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="date_time">DATE TIME</string>
    <string name="lost_network">Mất kết nối mạng</string>
    <string name="retry_network">Bạn vui lòng kiểm tra kết nối mạng và tải lại nhé</string>
    <string name="btn_reload">Tải lại</string>
    <string name="favorite">Yêu thích</string>
    <string name="delete_all"><b><i>Xóa tất cả</i> </b> </string>
    <string name="article_empty">Chưa có bài báo yêu thích nào!</string>
    <string name="setting">Cài đặt</string>
    <string name="settings_auth">Đăng nhập / Tạo tài khoản</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="op"><![CDATA[>]]></string>
    <string name="log_out">Đăng xuất</string>
    <string name="find_article">Tìm bài viết</string>
    <string name="cancel">Hủy</string>
    <string name="current_pw">Mật khẩu hiện tại</string>
    <string name="new_pw">Mật khẩu mới</string>
    <string name="confirm_new_pw">Xác nhận lai mật khẩu</string>
    <string name="update_pw">Cập nhật</string>

</resources>