<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".presentation.ui.component.settings.ChangePasswordFragment">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:src="@drawable/close"
        tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/text_auth_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_pw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#8c8c8c"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/new_pw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#8c8c8c"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/confirm_new_pw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#8c8c8c"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_password"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/update_pw"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:icon="@drawable/ic_key"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

</LinearLayout>