<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:colorBackground"
    tools:context=".presentation.ui.component.auth.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/top_background"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MyApp.Auth"
            android:textSize="35sp"
            android:text="@string/sign_up" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            android:layout_height="wrap_content"
            tools:ignore="PrivateResource">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_login"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textAppearance="@style/TextAppearance.MyApp.Auth"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_gravity="center"
            app:cornerRadius="5dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up" />

    </LinearLayout>

</LinearLayout>