<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".presentation.ui.component.auth.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_gravity="left"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        android:layout_marginBottom="24dp"
        app:tint="?attr/colorOnBackground"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/forgot_password"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.MyApp.Auth"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/intro_forgot_password"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="50dp"
        android:id="@+id/btn_get_password"
        app:cornerRadius="5dp"
        android:layout_width="250dp"
        android:backgroundTint="@color/btn_color"
        android:layout_height="48dp"
        android:text="@string/get_password"
        android:textSize="16sp"
        app:icon="@drawable/ic_key"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:textStyle="bold" />


</LinearLayout>