<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".presentation.ui.component.favorite.FavoriteFragment">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/itemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/icon"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="33dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:text="@string/favorite"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            android:textColor="@color/text_auth_color" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_delete_all"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/article_item" />

    <LinearLayout
        android:id="@+id/layout_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_delete_all"
        tools:ignore="SpeakableTextPresentCheck,UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/empty1"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextAppearance.MyApp.HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/article_empty"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>